--- a/style.css
+++ b/style.css
@@ -4,11 +4,41 @@ body {
 }
 
 
-canvas {
+/*canvas {
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
     display: block;
     width: 500px;
+}*/
+
+
+.grid-container > div {
+    background-color: gray
 }
+
+.grid-container > div:nth-child(odd){
+    background-color: #ddd;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1em;
+    justify-items: stretch;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.box1{
+    grid-column: 1/3;
+}
+
+.box2{
+
+}
+
+.box3{
+
+
+}
+
