--- a/style.css
+++ b/style.css
@@ -14,23 +14,44 @@ body {
 }*/
 
 
-.grid-container > div {
+.grid-container1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(200px, auto);
+}
+
+.box4 {
+    justify-self: center;
+    align-self: flex-end;
+}
+
+.site-logo h1{
+    position: relative;
+    left: 10px;
+}
+.site-logo h2{
+    position: relative;
+    left: 70px;
+}
+
+
+.grid-container2 > div {
     background-color: gray
 }
 
-.grid-container > div:nth-child(odd){
+.grid-container2 > div:nth-child(odd){
     background-color: #ddd;
 }
-.grid-container {
+.grid-container2 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 1em;
     justify-items: stretch;
     grid-auto-rows: minmax(100px, auto);
 }
 
 .box1{
-    grid-column: 1/3;
+
 }
 
 .box2{
