--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }*/
 
 
-header{
+header {
     text-align: start;
     font-family: 'Courier New', Courier, monospace;
     font-size: 72px;
@@ -28,7 +28,7 @@ header{
     padding-left: 2rem;
 }
 
-.artist-info{
+.artist-info {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     text-align: start;
@@ -37,30 +37,31 @@ header{
 
 
 
-.grid-container2 > div {
+.grid-container2>div {
     background-color: gray;
 }
 
-.grid-container2 > div:nth-child(odd){
+.grid-container2>div:nth-child(odd) {
     background-color: #ddd;
 }
+
 .grid-container2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
-    grid-auto-rows: minmax(100px, auto);s
+    grid-auto-rows: minmax(100px, auto);
     padding-top: 1rem;
     max-width: 100%;
 }
 
-.box1 canvas{
+.box1 canvas {
     border: 4px black solid;
 }
 
-.box1 h1{
+.box1 h1 {
     text-align: center;
 }
 
-.box2 canvas{
+.box2 canvas {
     border: 4px blue solid;
 }
