--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
         padding: 0;
         background-color: #E3E2DF;
         overflow-x: hidden;
-        width: 80%;
+        width: 75%;
         text-align: center;
     }
 
@@ -103,8 +103,47 @@
 
     .svg-text h4 {
         padding-left: 0px;
-        
+
     }
+
+    .headline {
+        font-family: 'Courier New', Courier, monospace;
+        font-weight: bold;
+        text-align: left;
+    }
+
+    .dokumentasjon {
+        font-family: 'Courier New', Courier, monospace;
+        font-weight: bold;
+    }
+
+    .dokumentasjon p {
+        text-align: left;
+        font-weight: lighter;
+    }
+
+    .dokumentasjon h3 {
+        text-align: left;
+    }
+
+
+    .dokumentasjon button {
+        border: none;
+        color: white;
+        background-color: #4CAF50;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+    .dokumentasjon button:hover {
+        background-color: black;
+    }
+
 
 
 
@@ -114,7 +153,7 @@
             padding: 0;
             background-color: #E3E2DF;
             overflow-x: hidden;
-            width: 70%;
+            width: 60%;
             text-align: center;
         }
 
@@ -129,10 +168,12 @@
         }
 
         .artist-info {
+            margin: auto;
             font-family: 'Courier New', Courier, monospace;
             font-weight: bold;
-            text-align: start;
             padding-left: 1rem;
+            width: 90%;
+            justify-content: center;
         }
 
         .grid-container {
